add supplies crud
